# collatz-convergence

./: .env.example  .gitignore  AGENTS.md  README.md  README_RU.md  docker-compose.yml
.github/workflows/: pages.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 74bba77944e1_init_lothar_collatz.py
backend/app/: __init__.py  main.py
backend/app/api/: container.py
backend/app/api/routes/: lothar_collatz.py
backend/app/core/: settings.py
backend/app/domain/: charts.py  lothar_collatz.py  repositories.py
backend/app/dto/: lothar_collatz.py
backend/app/infrastructure/db/: models.py  session.py
backend/app/infrastructure/repositories/: postgres_lothar_collatz_repository.py
backend/app/services/: lothar_collatz_service.py
docs/: er-diagram.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: styles-content.js
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  theme.ts  types.ts
frontend/src/components/: ControlPanel.tsx  ConvergenceFlow3DView.tsx  ConvergenceTree3DView.tsx  ConvergenceTreeView.tsx  LineChartView.tsx  NetworkChartView.tsx  PathChartView.tsx  PathTracePanel.tsx  ValueHistogramView.tsx  treeGradient.ts
frontend/src/services/: clientCache.ts  collatzClient.ts
