[tool.poetry]
name = "collatz-convergence-explorer-api"
version = "0.1.0"
description = "Collatz Convergence Explorer (3n + 1) API"
authors = ["Artasov <ivanhvalevskey@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "0.135.1"
pydantic = "2.12.5"
pydantic-settings = "2.13.1"
psycopg = { version = "3.3.3", extras = ["binary"] }
sqlalchemy = "2.0.47"
uvicorn = { version = "0.41.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
alembic = "1.18.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
